Fixing wrap margin

--- a/src/scss/cubicColorPicker.scss
+++ b/src/scss/cubicColorPicker.scss
@@ -4,7 +4,7 @@ $gradient: "data:image/  png;base64,iVBORw0KGgoAAAANSUhEUgAABCwAAAMACAIAAABguWEE
   z-index: 3;
 	perspective: 800px;
 	perspective-origin: 50% 100px;
-  margin: 50px;
+  margin: 150px;
   height: 200px;
   width: 200px;
   border: solid 0 #fff;
